# mini-player

./: debug.txt  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/miniplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  miniplayer_jni.cpp  native-lib.cpp  stb_image.h
app/src/main/ffmpeg/include/libavutil/: ffversion.h
app/src/main/java/com/example/miniplayer/: MainActivity.java  MiniPlayer.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/miniplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
